--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -1,7 +1,7 @@
 ---
 title: "Using Machine Learning algorithims to predict stock price trends"
 date: 2019-07-24
-permalink: /stocks/
+permalink: /2019-07-24-stocks/
 tags: [machine learning, data science, neural network, data mining, naive bayes]
 header:
   image: "images/NeuralNetwork.png"
