--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -4,5 +4,7 @@ date: 2019-07-24
 tags: [machine learning, data science, neural network, data mining, naive bayes]
 header:
   image: "images/NeuralNetwork.png"
+excerpt: "Machine Learning"
 
 ---
+# H1 header
