--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -7,4 +7,12 @@ header:
 excerpt: "Machine Learning"
 
 ---
-# H1 header
+# Machine Learning and Mathematical Modeling Project to predict stock price trends
+  This project utilized multiple machine learning algorithims including:
+  1. Neural network
+  2. Naive bayes
+  3. Linear Regression
+
+  The stock market is a very volatile agent that can cost many people a lot of money. Whenever investing in it, one has to take into consideration many techinical indicators such as RSI and other shit.
+
+  The research paper that explains everything in much more detail is linked down below [link](https://docs.google.com/document/d/1CH2NBqQ97SmrK-o2fUZSxCD8w3tXd9uhHxf5t3MG4to/edit?usp=sharing)
