--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -3,7 +3,7 @@ title: "Using Machine Learning algorithims to predict stock price trends"
 date: 2019-07-24
 tags: [machine learning, data science, neural network, data mining, naive bayes]
 header:
-  image: "images/NeuralNetwork.png"
+  image: "images/NN.png"
 excerpt: "Machine Learning"
 
 ---
