--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -4,7 +4,7 @@ date: 2019-07-24
 tags: [machine learning, data science, neural network, data mining, naive bayes]
 header:
   image: "images/AI.jpeg"
-excerpt: "Machine Learning"
+excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 
 ---
 # Machine Learning and Mathematical Modeling Project to predict stock price trends
