--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -7,7 +7,7 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 
 ---
 # Machine Learning and Mathematical Modeling Project to predict stock price trends
-<img src = "images/AI.jpeg"
+<img src="{{ site.url }}{{ site.baseurl }}/images/AI.jpeg" alt="">
 
 
   This project utilized multiple machine learning algorithims including:
