--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -7,7 +7,9 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 
 ---
 # Machine Learning and Mathematical Modeling Project to predict stock price trends
-<img src="{{ site.url }}{{ site.baseurl }}/images/AI.jpeg" alt="">
+Heres an image:
+
+<img src="{{ site.url }}{{ site.baseurl }}/images/AI.jpeg" alt="nice">
 
 
   This project utilized multiple machine learning algorithims including:
