--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -4,6 +4,7 @@ date: 2019-07-24
 header:
   image: "images/AI.jpeg"
 excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
+author_profile: true
 
 ---
 # Machine Learning and Mathematical Modeling Project to predict stock price trends
