--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -1,11 +1,9 @@
 ---
-title: "Using Machine Learning algorithims to predict stock price trends"
-date: 2019-07-24
-header:
-  image: "images/AI.jpeg"
-excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
-author_profile: true
 
+title: "About Me"
+permalink: /about/
+header:
+  image: "/images/AI.png"
 ---
 # Machine Learning and Mathematical Modeling Project to predict stock price trends
 Heres an image:
