--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -1,9 +1,15 @@
 ---
 
-title: "About Me"
-permalink: /about/
+title: "Using Machine Learning algorithms to predict stock price trends"
+date: 2019-07-24
+
 header:
-  image: "/images/AI.png"
+  image: "images/AI.jpeg"
+
+excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
+
+author_profile: true
+
 ---
 # Machine Learning and Mathematical Modeling Project to predict stock price trends
 Heres an image:
