--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -4,7 +4,7 @@ title: "Using Machine Learning algorithms to predict stock price trends"
 date: 2019-07-24
 
 header:
-  image: "images/AI.jpeg"
+  image: "/images/AI.jpeg"
 
 excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 
