--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -2,17 +2,14 @@
 
 title: "Using Machine Learning algorithms to predict stock price trends"
 date: 2019-07-24
-
 header:
   image: "/images/AI.jpeg"
-
 excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
-
-author_profile: true
 
 ---
 # Machine Learning and Mathematical Modeling Project to predict stock price trends
 Heres an image:
+cool
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/AI.jpeg" alt="nice">
 
