--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -18,6 +18,7 @@ cool
   1. Neural network
   2. Naive bayes
   3. Linear Regression
+  4. cool
 
   The stock market is a very volatile agent that can cost many people a lot of money. Whenever investing in it, one has to take into consideration many techinical indicators such as RSI and other shit.
 
