--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -1,6 +1,5 @@
 ---
-
-title: "Using Machine Learning algorithms to predict stock price trends"
+title: "Using Machine Learning algorithims to predict stock price trends"
 date: 2019-07-24
 header:
   image: "/images/AI.jpeg"
@@ -9,16 +8,14 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 ---
 # Machine Learning and Mathematical Modeling Project to predict stock price trends
 Heres an image:
-cool
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/AI.jpeg" alt="nice">
+<img src="{{ site.url }}{{ site.baseurl }}/images/AI.jpeg" alt="">
 
 
   This project utilized multiple machine learning algorithims including:
   1. Neural network
   2. Naive bayes
   3. Linear Regression
-  4. cool
 
   The stock market is a very volatile agent that can cost many people a lot of money. Whenever investing in it, one has to take into consideration many techinical indicators such as RSI and other shit.
 
