--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -6,17 +6,26 @@ header:
 excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 
 ---
-# Machine Learning and Mathematical Modeling Project to predict stock price trends
-Heres an image:
-
-<img src="{{ site.url }}{{ site.baseurl }}/images/AI.jpeg" alt="">
 
 
-  This project utilized multiple machine learning algorithims including:
-  1. Neural network
-  2. Naive bayes
+#   Predicting Stock Price Trends Using Machine Learning and Mathematical Modeling
+
+##    The Problem
+        Stocks are the most widespread financial instruments in the world. In today’s world, investors have often faced challenges investing money in the stock market. Average investors, all factors being equal, typically make an investment decision based on incomplete information (tips, emotions, skewed reports). In addition, investors often assume that merely previous stock price trends can automatically yield promising results; however, this is truly not the case. Uninformed financial decisions make for unwise investment choices.
+##    The Solution: Machine Learning
+        Machine learning is the branch of computer science that has to do with building algorithms that are guided by data. Rather than relying on human programmers to provide explicit instructions, machine learning algorithms use training sets of real-world data to infer models that are more accurate and sophisticated than humans could devise on their own.
+
+##    This project utilized multiple machine learning algorithms including:
+  1. Neural Network
+  2. Naive Bayes
   3. Linear Regression
 
-  The stock market is a very volatile agent that can cost many people a lot of money. Whenever investing in it, one has to take into consideration many techinical indicators such as RSI and other shit.
+## Neural Networks
+    A neural network (NN) is a mathematical or computational model that is derived from the structure and functional aspects of biological neural networks. Neural networks use a certain algorithm known as back propagation algorithm, which is a supervised learning method that can be divided into two phases: propagation and weight update. The two phases are repeated until the performance of the network is sufficient.
+
+    Image of a Neural Network:
+        <img src="{{ site.url }}{{ site.baseurl }}/images/NN.png" alt="This shows how a Neural Network works">
+
+
 
   The research paper that explains everything in much more detail is linked down below [link](https://docs.google.com/document/d/1CH2NBqQ97SmrK-o2fUZSxCD8w3tXd9uhHxf5t3MG4to/edit?usp=sharing)
