--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -29,6 +29,17 @@ Image of a Neural Network:
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/NN.png" alt="This shows how a Neural Network works">
 
+## Naive Bayes
+
+Naive Bayesian model is easy to build, with no complicated iterative parameter estimation which makes it particularly useful for very large datasets. Despite its simplicity, the Naive Bayesian classifier often does surprisingly well and is widely used because it often outperforms more sophisticated classification methods. Bayesian theorem provides a way of calculating the posterior probability, P(c|x), from P(c), P(x), and P(x|c).
+
+Image of Bayesian Theory
+
+<img src="{{ site.url }}{{ site.baseurl }}/images/bayes.png" alt="This shows what Bayesian Theory is">
+
+## Linear Regression
+
+
 
 
 The research paper that explains everything in much more detail is linked down below [link](https://docs.google.com/document/d/1CH2NBqQ97SmrK-o2fUZSxCD8w3tXd9uhHxf5t3MG4to/edit?usp=sharing)
