--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -31,7 +31,7 @@ Image of a Neural Network:
 
 ## Naive Bayes
 
-Naive Bayesian model is easy to build, with no complicated iterative parameter estimation which makes it particularly useful for very large datasets. Despite its simplicity, the Naive Bayesian classifier often does surprisingly well and is widely used because it often outperforms more sophisticated classification methods. Bayesian theorem provides a way of calculating the posterior probability, P(c|x), from P(c), P(x), and P(x|c).
+Naive Bayesian model is easy to build, with no complicated iterative parameter estimation which makes it particularly useful for very large datasets. Despite its simplicity, the Naive Bayesian classifier often does surprisingly well and is widely used because it often outperforms more sophisticated classification methods. Bayesian theorem provides a way of calculating the posterior probability.
 
 Image of Bayesian Theory
 
@@ -39,7 +39,16 @@ Image of Bayesian Theory
 
 ## Linear Regression
 
+Linear Regression is used for numerical prediction. It is a statistical measure that attempts to determine the strength of the relationship between one dependent variable (the label attribute) and a series of other changing variables classified as independent variables (regular attributes). Regression is used for predicting a continuous value. Linear regression models the relationship between a scalar variable and one or more explanatory variables by fitting a linear equation to the observed data.
 
+Image of Linear Regression
 
+<img src="{{ site.url }}{{ site.baseurl }}/images/LR.png" alt="This shows what Linear Regression is">
 
-The research paper that explains everything in much more detail is linked down below [link](https://docs.google.com/document/d/1CH2NBqQ97SmrK-o2fUZSxCD8w3tXd9uhHxf5t3MG4to/edit?usp=sharing)
+## More Information:
+
+This post is just a brief explanation of the project. For more detail visit the research paper that was written.
+
+The research paper that explains everything in much more detail is linked down below:
+
+[Predicting Stock Prices using Machine Learning algorithms and Mathematical Modeling](https://docs.google.com/document/d/1CH2NBqQ97SmrK-o2fUZSxCD8w3tXd9uhHxf5t3MG4to/edit?usp=sharing)
