--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -41,7 +41,7 @@ Image of Bayesian Theory
 
 Linear Regression is used for numerical prediction. It is a statistical measure that attempts to determine the strength of the relationship between one dependent variable (the label attribute) and a series of other changing variables classified as independent variables (regular attributes). Regression is used for predicting a continuous value. Linear regression models the relationship between a scalar variable and one or more explanatory variables by fitting a linear equation to the observed data.
 
-Image of Linear Regression
+Image of Linear Regression:
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/LR.png" alt="This shows what Linear Regression is">
 
