--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -1,8 +1,9 @@
 ---
 title: "Using the Minimax algorithm to build a unbeatable TicTacToe AI"
 date: 2019-07-25
+tags: [cool]
 header:
   image: "/images/AI.jpeg"
-excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
+excerpt: "Minimax, Java Coding, AI"
 
 ---
