--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -4,7 +4,15 @@ date: 2019-07-25
 tags: [cool]
 header:
   image: "/images/AI.jpeg"
-excerpt: "Minimax, Java Coding, AI"
+excerpt: "Minimax, Java Coding, Artificial Intelligence"
 
 ---
-guh
+# Creating an Unbeatable TicTacToe AI using the Minimax Algorithm
+
+<img src="{{ site.url }}{{ site.baseurl }}/images/tic.png" alt="TicTacToe">
+
+## Introduction
+
+TicTacoToe is a very old game that was created in Ancient Egypt around 1300 BCE. Although initially used to test intelligence between individuals, it can be seen that if both players play in an optimal way the result is always a draw. Thus, using Artificial Intelligence, making a unbeatable computer is possible. Coding this has been quite enjoyable and I have learned much about game trees and the Minimax Algorithm as well.
+
+## Game Tree
