--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -4,7 +4,7 @@ date: 2019-07-25
 tags: [cool]
 header:
   image: "/images/AI.jpeg"
-excerpt: "Minimax, Java Coding, Artificial Intelligence"
+excerpt: "Minimax, Java Coding, Artificial Intelligence, Game Trees"
 
 ---
 # Creating an Unbeatable TicTacToe AI using the Minimax Algorithm
@@ -16,3 +16,9 @@ excerpt: "Minimax, Java Coding, Artificial Intelligence"
 TicTacoToe is a very old game that was created in Ancient Egypt around 1300 BCE. Although initially used to test intelligence between individuals, it can be seen that if both players play in an optimal way the result is always a draw. Thus, using Artificial Intelligence, making a unbeatable computer is possible. Coding this has been quite enjoyable and I have learned much about game trees and the Minimax Algorithm as well.
 
 ## Game Tree
+
+A game tree is all the possibilities that a user can employ to make a move. By viewing multiple possibilities and layers of moves that can be made, an minimax algorithim can be created. For example, in TicTacToe, after a user moves, the computer will be given all the possible spots it can move and afterwards it will create another layer of the tree suggesting where the user could move. AFter doing that multiple times, the algorithm becomes unbeatable.
+
+This is an image of a TicTacToe game tree:
+
+<img src="{{ site.url }}{{ site.baseurl }}/images/game.jpg" alt="TicTacToe">
