--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -1,5 +1,5 @@
 ---
-title: "Using the Minimax algorithm to build a unbeatable TicTacToe AI"
+title: "Using the Minimax algorithm to build an unbeatable TicTacToe AI"
 date: 2019-07-25
 tags: [cool]
 header:
@@ -13,12 +13,23 @@ excerpt: "Minimax, Java Coding, Artificial Intelligence, Game Trees"
 
 ## Introduction
 
-TicTacoToe is a very old game that was created in Ancient Egypt around 1300 BCE. Although initially used to test intelligence between individuals, it can be seen that if both players play in an optimal way the result is always a draw. Thus, using Artificial Intelligence, making a unbeatable computer is possible. Coding this has been quite enjoyable and I have learned much about game trees and the Minimax Algorithm as well.
+TicTacoToe is a very old game that was created in Ancient Egypt around 1300 BCE. Although initially used to test intelligence between individuals, it can be seen that if both players play in an optimal way the result is always a draw. Thus, using Artificial Intelligence, making a unbeatable computer is possible. Coding this has been quite enjoyable and I have learned much about game trees, recursive methods, and the Minimax Algorithm as well.
 
 ## Game Tree
 
-A game tree is all the possibilities that a user can employ to make a move. By viewing multiple possibilities and layers of moves that can be made, an minimax algorithim can be created. For example, in TicTacToe, after a user moves, the computer will be given all the possible spots it can move and afterwards it will create another layer of the tree suggesting where the user could move. AFter doing that multiple times, the algorithm becomes unbeatable.
+A game tree is all the possibilities that a user can employ to make a move. By viewing multiple possibilities and layers of moves that can be made, an minimax algorithim can be created. For example, in TicTacToe, after a user moves, the computer will be given all the possible spots it can move and afterwards it will create another layer of the tree suggesting where the user could move. After doing that multiple times, the algorithm becomes unbeatable.
 
 This is an image of a TicTacToe game tree:
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/game.jpg" alt="TicTacToe">
+
+## Recursive methods
+
+A recursive method is commonly used in java. The  definition of it is a method that repeatedly calls itself. For example, a common use of a recursive method is to solve a fibonacci series. This can be seen below:
+ '''Java
+public void
+'''
+
+## Minimax Algorithm
+
+The Minimax algorithm is what allows us to create an unbeatable TicTacToe AI. This algorithm is a recursive method that
