--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -26,9 +26,18 @@ This is an image of a TicTacToe game tree:
 ## Recursive methods
 
 A recursive method is commonly used in java. The  definition of it is a method that repeatedly calls itself. For example, a common use of a recursive method is to solve a fibonacci series. This can be seen below:
- '''Java
-public void
-'''
+ ```java
+ public class FibonacciExample{
+
+   public static int fibonacci(int x){
+    if(x<2)
+      return x;
+    else{    
+      return fibonacci(x-1) + fibonacci(x-2);            
+    }
+ }
+}
+ ```
 
 ## Minimax Algorithm
 
