--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -27,17 +27,18 @@ This is an image of a TicTacToe game tree:
 
 A recursive method is commonly used in java. The  definition of it is a method that repeatedly calls itself. For example, a common use of a recursive method is to solve a fibonacci series. This can be seen below:
  ```java
- public class FibonacciExample{
-
-   public static int fibonacci(int x){
+ public class FibonacciExample
+ {
+   public static int fibonacci(int x)
+   {
     if(x<2)
       return x;
-    else{    
+    else
       return fibonacci(x-1) + fibonacci(x-2);            
-    }
+   }
  }
-}
  ```
+ Notice how that inside the fibonacci method, there is a call to itself in the return statement. This is what recursion is all about. The ability of a method to call itself. This becomes very helpful in the Minimax Algorithm as well.
 
 ## Minimax Algorithm
 
