--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -42,4 +42,21 @@ A recursive method is commonly used in java. The  definition of it is a method t
 
 ## Minimax Algorithm
 
-The Minimax algorithm is what allows us to create an unbeatable TicTacToe AI. This algorithm is a recursive method that
+The Minimax algorithm is what allows us to create an unbeatable TicTacToe AI. To win a game of TicTacToe, one must be able to foresee multiple events and make a decision based on those future outcomes. The Minimax Algorithm does just that. It foresees all possible outcomes and based on that it makes its decision, which means that the AI will be unbeatable. The Minimax algorithm employs a backtracking recursive method that allows it to see ahead and make a decision based on those future outcomes.
+
+The Minimax Algorithm code in java:
+
+```java
+private static int miniMax (Board.State player, Board board, int currentPly) {
+        if (currentPly++ == maxPly || board.isGameOver()) {
+            return score(player, board);
+        }
+
+        if (board.getTurn() == player) {
+            return getMax(player, board, currentPly);
+        } else {
+            return getMin(player, board, currentPly);
+        }
+
+    }
+```
