--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -59,4 +59,50 @@ private static int miniMax (Board.State player, Board board, int currentPly) {
         }
 
     }
+    private static int getMax (Board.State player, Board board, int currentPly) {
+        double bestScore = Double.NEGATIVE_INFINITY;
+        int indexOfBestMove = -1;
+
+        for (Integer theMove : board.getAvailableMoves()) {
+
+            Board modifiedBoard = board.getDeepCopy();
+            modifiedBoard.move(theMove);
+
+            int score = miniMax(player, modifiedBoard, currentPly);
+
+            if (score >= bestScore) {
+                bestScore = score;
+                indexOfBestMove = theMove;
+            }
+
+        }
+
+        board.move(indexOfBestMove);
+        return (int)bestScore;
+    }
+
+    /**
+     * Play the move with the lowest score.
+     * @param player        the player that the AI will identify as
+     * @param board         the Tic Tac Toe board to play on
+     * @param currentPly    the current depth
+     * @return              the score of the board
+     */
+    private static int getMin (Board.State player, Board board, int currentPly) {
+        double bestScore = Double.POSITIVE_INFINITY;
+        int indexOfBestMove = -1;
+
+        for (Integer theMove : board.getAvailableMoves()) {
+
+            Board modifiedBoard = board.getDeepCopy();
+            modifiedBoard.move(theMove);
+
+            int score = miniMax(player, modifiedBoard, currentPly);
+
+            if (score <= bestScore) {
+                bestScore = score;
+                indexOfBestMove = theMove;
+            }
+
+        }
 ```
