--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -51,4 +51,4 @@ This post is just a brief explanation of the project. For more detail visit the 
 
 The research paper that explains everything in much more detail is linked down below:
 
-[Predicting Stock Prices using Machine Learning algorithms and Mathematical Modeling](https://docs.google.com/document/d/1CH2NBqQ97SmrK-o2fUZSxCD8w3tXd9uhHxf5t3MG4to/edit?usp=sharing)
+[Predicting Stock Prices using Machine Learning algorithms and Mathematical Modeling Research Paper](https://docs.google.com/document/d/1CH2NBqQ97SmrK-o2fUZSxCD8w3tXd9uhHxf5t3MG4to/edit?usp=sharing)
