--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -42,31 +42,38 @@ A recursive method is commonly used in java. The  definition of it is a method t
 
 ## Minimax Algorithm
 
-The Minimax algorithm is what allows us to create an unbeatable TicTacToe AI. To win a game of TicTacToe, one must be able to foresee multiple events and make a decision based on those future outcomes. The Minimax Algorithm does just that. It foresees all possible outcomes and based on that it makes its decision, which means that the AI will be unbeatable. The Minimax algorithm employs a backtracking recursive method that allows it to see ahead and make a decision based on those future outcomes.
+The Minimax algorithm is what allows us to create an unbeatable TicTacToe AI. To win a game of TicTacToe, one must be able to foresee multiple events and make a decision based on those future outcomes. The Minimax Algorithm does just that. It foresees all possible outcomes and based on that it makes its decision, which means that the AI will be unbeatable. The Minimax algorithm employs a backtracking recursive method that allows it to see ahead and make a decision based on those future outcomes. Furthermore, in the minimax, there are generally two players that are called the maximizing or minimizing player. The Maximizing player is trying to maximize his or her score while the minimizing player is trying to minimize his or her score.
 
 The Minimax Algorithm code in java:
 
 ```java
-private static int miniMax (Board.State player, Board board, int currentPly) {
-        if (currentPly++ == maxPly || board.isGameOver()) {
+public static int miniMax (Board.State play, Board board, int cPlay) {
+        if (cPlay = cPlay+1 == maxPly || board.isGameOver()) {
             return score(player, board);
         }
 
-        if (board.getTurn() == player) {
+        if (board.getTheTurn() == player) {
             return getMax(player, board, currentPly);
         } else {
             return getMin(player, board, currentPly);
         }
 
     }
-    private static int getMax (Board.State player, Board board, int currentPly) {
-        double bestScore = Double.NEGATIVE_INFINITY;
+    /*
+      The getMax method returns the best possible move that the user can make if he or she is the maximizing player.
+      The Board is the TicTacToe board that is currently in play
+      The cPlay is the current Play that could be made.
+    */
+
+    public static int getMax (Board.State play, Board board, int cPlay) {
+        double bestS = Double.NEGATIVE_INFINITY;
         int indexOfBestMove = -1;
 
-        for (Integer theMove : board.getAvailableMoves()) {
+        for (Integer theMove : board.getMoves()) {
 
-            Board modifiedBoard = board.getDeepCopy();
-            modifiedBoard.move(theMove);
+            Board modified = board.getDeepCopy();
+
+            modified.move(theMove);
 
             int score = miniMax(player, modifiedBoard, currentPly);
 
@@ -77,25 +84,21 @@ private static int miniMax (Board.State player, Board board, int currentPly) {
 
         }
 
-        board.move(indexOfBestMove);
-        return (int)bestScore;
     }
-
-    /**
-     * Play the move with the lowest score.
-     * @param player        the player that the AI will identify as
-     * @param board         the Tic Tac Toe board to play on
-     * @param currentPly    the current depth
-     * @return              the score of the board
-     */
-    private static int getMin (Board.State player, Board board, int currentPly) {
-        double bestScore = Double.POSITIVE_INFINITY;
+    /*
+      The getMin method returns the best possible move that the user can make if he or she is the minimizing player.
+      The Board is the TicTacToe board that is currently in play
+      The cPlay is the current Play that could be made.
+    */
+    public static int getMax (Board.State play, Board board, int cPlay) {
+        double bestS = Double.NEGATIVE_INFINITY;
         int indexOfBestMove = -1;
 
-        for (Integer theMove : board.getAvailableMoves()) {
+        for (Integer theMove : board.getMoves()) {
 
-            Board modifiedBoard = board.getDeepCopy();
-            modifiedBoard.move(theMove);
+            Board modified = board.getDeepCopy();
+
+            modified.move(theMove);
 
             int score = miniMax(player, modifiedBoard, currentPly);
 
