--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -83,7 +83,7 @@ public static int miniMax (Board.State play, Board board, int cPlay) {
             }
 
         }
-
+        return indexOfBestMove;
     }
     /*
       The getMin method returns the best possible move that the user can make if he or she is the minimizing player.
@@ -108,5 +108,6 @@ public static int miniMax (Board.State play, Board board, int cPlay) {
             }
 
         }
+        return indexOfBestMove;
       }
 ```
