--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -1,6 +1,7 @@
 ---
 title: "Using Machine Learning algorithims to predict stock price trends"
 date: 2019-07-24
+tags: [Machine Learning, Algorithm, Data Science]
 header:
   image: "/images/AI.jpeg"
 excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
