--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -12,7 +12,8 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 #   Predicting Stock Price Trends Using Machine Learning and Mathematical Modeling
 
 ##   The Problem
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Stocks are the most widespread financial instruments in the world. In today’s world, investors have often faced challenges investing money in the stock market. Average investors, all factors being equal, typically make an investment decision based on incomplete information (tips, emotions, skewed reports). In addition, investors often assume that merely previous stock price trends can automatically yield promising results; however, this is truly not the case. Uninformed financial decisions make for unwise investment choices.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+> Stocks are the most widespread financial instruments in the world. In today’s world, investors have often faced challenges investing money in the stock market. Average investors, all factors being equal, typically make an investment decision based on incomplete information (tips, emotions, skewed reports). In addition, investors often assume that merely previous stock price trends can automatically yield promising results; however, this is truly not the case. Uninformed financial decisions make for unwise investment choices.
 
 ##    The Solution: Machine Learning
 Machine learning is the branch of computer science that has to do with building algorithms that are guided by data. Rather than relying on human programmers to provide explicit instructions, machine learning algorithms use training sets of real-world data to infer models that are more accurate and sophisticated than humans could devise on their own.
