--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -14,42 +14,40 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 ##   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The Problem
 > Stocks are the most widespread financial instruments in the world. In today’s world, investors have often faced challenges investing money in the stock market. Average investors, all factors being equal, typically make an investment decision based on incomplete information (tips, emotions, skewed reports). In addition, investors often assume that merely previous stock price trends can automatically yield promising results; however, this is truly not the case. Uninformed financial decisions make for unwise investment choices.
 
-##    The Solution: Machine Learning
-Machine learning is the branch of computer science that has to do with building algorithms that are guided by data. Rather than relying on human programmers to provide explicit instructions, machine learning algorithms use training sets of real-world data to infer models that are more accurate and sophisticated than humans could devise on their own.
+##   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The Solution: Machine Learning
+> Machine learning is the branch of computer science that has to do with building algorithms that are guided by data. Rather than relying on human programmers to provide explicit instructions, machine learning algorithms use training sets of real-world data to infer models that are more accurate and sophisticated than humans could devise on their own.
 
-##    This project utilized multiple machine learning algorithms including:
+##   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This project utilized multiple machine learning algorithms including:
   1. Neural Network
   2. Naive Bayes
   3. Linear Regression
 
-## Neural Networks
+## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Neural Networks
 
-A neural network (NN) is a mathematical or computational model that is derived from the structure and functional aspects of biological neural networks. Neural networks use a certain algorithm known as back propagation algorithm, which is a supervised learning method that can be divided into two phases: propagation and weight update. The two phases are repeated until the performance of the network is sufficient.
+>A neural network (NN) is a mathematical or computational model that is derived from the structure and functional aspects of biological neural networks. Neural networks use a certain algorithm known as back propagation algorithm, which is a supervised learning method that can be divided into two phases: propagation and weight update. The two phases are repeated until the performance of the network is sufficient.
 
-Image of a Neural Network:
+>Image of a Neural Network:
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/NN.png" alt="This shows how a Neural Network works">
 
-## Naive Bayes
+## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Naive Bayes
 
-Naive Bayesian model is easy to build, with no complicated iterative parameter estimation which makes it particularly useful for very large datasets. Despite its simplicity, the Naive Bayesian classifier often does surprisingly well and is widely used because it often outperforms more sophisticated classification methods. Bayesian theorem provides a way of calculating the posterior probability.
+>Naive Bayesian model is easy to build, with no complicated iterative parameter estimation which makes it particularly useful for very large datasets. Despite its simplicity, the Naive Bayesian classifier often does surprisingly well and is widely used because it often outperforms more sophisticated classification methods. Bayesian theorem provides a way of calculating the posterior probability.
 
-Image of Bayesian Theory
+>Image of Bayesian Theory
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/bayes.png" alt="This shows what Bayesian Theory is">
 
-## Linear Regression
+## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Linear Regression
 
-Linear Regression is used for numerical prediction. It is a statistical measure that attempts to determine the strength of the relationship between one dependent variable (the label attribute) and a series of other changing variables classified as independent variables (regular attributes). Regression is used for predicting a continuous value. Linear regression models the relationship between a scalar variable and one or more explanatory variables by fitting a linear equation to the observed data.
+>Linear Regression is used for numerical prediction. It is a statistical measure that attempts to determine the strength of the relationship between one dependent variable (the label attribute) and a series of other changing variables classified as independent variables (regular attributes). Regression is used for predicting a continuous value. Linear regression models the relationship between a scalar variable and one or more explanatory variables by fitting a linear equation to the observed data.
 
-Image of Linear Regression:
+>Image of Linear Regression:
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/LR.png" alt="This shows what Linear Regression is">
 
-## More Information:
+## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;More Information:
 
-This post is just a brief explanation of the project. For more detail visit the research paper that was written.
-
-The research paper that explains everything in much more detail is linked down below:
+>This post is just a brief explanation of the project. For more detail visit the research paper that was written. It is attached in the following link:
 
 [Predicting Stock Prices using Machine Learning algorithms and Mathematical Modeling Research Paper](https://docs.google.com/document/d/1CH2NBqQ97SmrK-o2fUZSxCD8w3tXd9uhHxf5t3MG4to/edit?usp=sharing)
