--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -18,6 +18,7 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 > Machine learning is the branch of computer science that has to do with building algorithms that are guided by data. Rather than relying on human programmers to provide explicit instructions, machine learning algorithms use training sets of real-world data to infer models that are more accurate and sophisticated than humans could devise on their own.
 
 ##   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This project utilized multiple machine learning algorithms including:
+
   1. Neural Network
   2. Naive Bayes
   3. Linear Regression
@@ -26,7 +27,7 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 
 >A neural network (NN) is a mathematical or computational model that is derived from the structure and functional aspects of biological neural networks. Neural networks use a certain algorithm known as back propagation algorithm, which is a supervised learning method that can be divided into two phases: propagation and weight update. The two phases are repeated until the performance of the network is sufficient.
 
->Image of a Neural Network:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Image of a Neural Network:
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/NN.png" alt="This shows how a Neural Network works">
 
@@ -34,7 +35,7 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 
 >Naive Bayesian model is easy to build, with no complicated iterative parameter estimation which makes it particularly useful for very large datasets. Despite its simplicity, the Naive Bayesian classifier often does surprisingly well and is widely used because it often outperforms more sophisticated classification methods. Bayesian theorem provides a way of calculating the posterior probability.
 
->Image of Bayesian Theory
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Image of Bayesian Theory
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/bayes.png" alt="This shows what Bayesian Theory is">
 
@@ -42,12 +43,12 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 
 >Linear Regression is used for numerical prediction. It is a statistical measure that attempts to determine the strength of the relationship between one dependent variable (the label attribute) and a series of other changing variables classified as independent variables (regular attributes). Regression is used for predicting a continuous value. Linear regression models the relationship between a scalar variable and one or more explanatory variables by fitting a linear equation to the observed data.
 
->Image of Linear Regression:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Image of Linear Regression:
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/LR.png" alt="This shows what Linear Regression is">
 
 ## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;More Information:
 
->This post is just a brief explanation of the project. For more detail visit the research paper that was written. It is attached in the following link:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This post is just a brief explanation of the project. For more detail visit the research paper that was written. It is attached in the following link:
 
-[Predicting Stock Prices using Machine Learning algorithms and Mathematical Modeling Research Paper](https://docs.google.com/document/d/1CH2NBqQ97SmrK-o2fUZSxCD8w3tXd9uhHxf5t3MG4to/edit?usp=sharing)
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Predicting Stock Prices using Machine Learning algorithms and Mathematical Modeling Research Paper](https://docs.google.com/document/d/1CH2NBqQ97SmrK-o2fUZSxCD8w3tXd9uhHxf5t3MG4to/edit?usp=sharing)
