--- a/_posts/2019-07-24-stocks.md
+++ b/_posts/2019-07-24-stocks.md
@@ -27,7 +27,7 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 
 >A neural network (NN) is a mathematical or computational model that is derived from the structure and functional aspects of biological neural networks. Neural networks use a certain algorithm known as back propagation algorithm, which is a supervised learning method that can be divided into two phases: propagation and weight update. The two phases are repeated until the performance of the network is sufficient.
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Image of a Neural Network:
+### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Image of a Neural Network:
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/NN.png" alt="This shows how a Neural Network works">
 
@@ -35,7 +35,7 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 
 >Naive Bayesian model is easy to build, with no complicated iterative parameter estimation which makes it particularly useful for very large datasets. Despite its simplicity, the Naive Bayesian classifier often does surprisingly well and is widely used because it often outperforms more sophisticated classification methods. Bayesian theorem provides a way of calculating the posterior probability.
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Image of Bayesian Theory
+###&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Image of Bayesian Theory
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/bayes.png" alt="This shows what Bayesian Theory is">
 
@@ -43,7 +43,7 @@ excerpt: "Machine Learning, Mathematical Modeling, Neural Networks"
 
 >Linear Regression is used for numerical prediction. It is a statistical measure that attempts to determine the strength of the relationship between one dependent variable (the label attribute) and a series of other changing variables classified as independent variables (regular attributes). Regression is used for predicting a continuous value. Linear regression models the relationship between a scalar variable and one or more explanatory variables by fitting a linear equation to the observed data.
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Image of Linear Regression:
+###&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Image of Linear Regression:
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/LR.png" alt="This shows what Linear Regression is">
 
