--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -7,25 +7,25 @@ header:
 excerpt: "Minimax, Java Coding, Artificial Intelligence, Game Trees"
 
 ---
-# Creating an Unbeatable TicTacToe AI using the Minimax Algorithm
+# &nbsp;&nbsp;&nbsp;Creating an Unbeatable TicTacToe AI using the Minimax Algorithm
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/tic.png" alt="TicTacToe">
 
-## Introduction
+## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Introduction
 
-TicTacoToe is a very old game that was created in Ancient Egypt around 1300 BCE. Although initially used to test intelligence between individuals, it can be seen that if both players play in an optimal way the result is always a draw. Thus, using Artificial Intelligence, making a unbeatable computer is possible. Coding this has been quite enjoyable and I have learned much about game trees, recursive methods, and the Minimax Algorithm as well.
+>TicTacoToe is a very old game that was created in Ancient Egypt around 1300 BCE. Although initially used to test intelligence between individuals, it can be seen that if both players play in an optimal way the result is always a draw. Thus, using Artificial Intelligence, making a unbeatable computer is possible. Coding this has been quite enjoyable and I have learned much about game trees, recursive methods, and the Minimax Algorithm as well.
 
-## Game Tree
+## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Game Tree
 
-A game tree is all the possibilities that a user can employ to make a move. By viewing multiple possibilities and layers of moves that can be made, an minimax algorithim can be created. For example, in TicTacToe, after a user moves, the computer will be given all the possible spots it can move and afterwards it will create another layer of the tree suggesting where the user could move. After doing that multiple times, the algorithm becomes unbeatable.
+>A game tree is all the possibilities that a user can employ to make a move. By viewing multiple possibilities and layers of moves that can be made, an minimax algorithim can be created. For example, in TicTacToe, after a user moves, the computer will be given all the possible spots it can move and afterwards it will create another layer of the tree suggesting where the user could move. After doing that multiple times, the algorithm becomes unbeatable.
 
-This is an image of a TicTacToe game tree:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This is an image of a TicTacToe game tree:
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/game.jpg" alt="TicTacToe">
 
-## Recursive methods
+## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Recursive methods
 
-A recursive method is commonly used in java. The  definition of it is a method that repeatedly calls itself. For example, a common use of a recursive method is to solve a fibonacci series. This can be seen below:
+>A recursive method is commonly used in java. The  definition of it is a method that repeatedly calls itself. For example, a common use of a recursive method is to solve a fibonacci series. This can be seen below:
  ```java
  public class FibonacciExample
  {
@@ -38,13 +38,13 @@ A recursive method is commonly used in java. The  definition of it is a method t
    }
  }
  ```
- Notice how that inside the fibonacci method, there is a call to itself in the return statement. This is what recursion is all about. The ability of a method to call itself. This becomes very helpful in the Minimax Algorithm as well.
+ >Notice how that inside the fibonacci method, there is a call to itself in the return statement. This is what recursion is all about. The ability of a method to call itself. This becomes very helpful in the Minimax Algorithm as well.
 
-## Minimax Algorithm
+## &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minimax Algorithm
 
-The Minimax algorithm is what allows us to create an unbeatable TicTacToe AI. To win a game of TicTacToe, one must be able to foresee multiple events and make a decision based on those future outcomes. The Minimax Algorithm does just that. It foresees all possible outcomes and based on that it makes its decision, which means that the AI will be unbeatable. The Minimax algorithm employs a backtracking recursive method that allows it to see ahead and make a decision based on those future outcomes. Furthermore, in the minimax, there are generally two players that are called the maximizing or minimizing player. The Maximizing player is trying to maximize his or her score while the minimizing player is trying to minimize his or her score.
+>The Minimax algorithm is what allows us to create an unbeatable TicTacToe AI. To win a game of TicTacToe, one must be able to foresee multiple events and make a decision based on those future outcomes. The Minimax Algorithm does just that. It foresees all possible outcomes and based on that it makes its decision, which means that the AI will be unbeatable. The Minimax algorithm employs a backtracking recursive method that allows it to see ahead and make a decision based on those future outcomes. Furthermore, in the minimax, there are generally two players that are called the maximizing or minimizing player. The Maximizing player is trying to maximize his or her score while the minimizing player is trying to minimize his or her score.
 
-The Minimax Algorithm code in java:
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Minimax Algorithm code in java:
 
 ```java
 public static int miniMax (Board.State play, Board board, int cPlay) {
