--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -45,8 +45,8 @@ excerpt: "Minimax, Java Coding, Artificial Intelligence, Game Trees"
 >The Minimax algorithm is what allows us to create an unbeatable TicTacToe AI. To win a game of TicTacToe, one must be able to foresee multiple events and make a decision based on those future outcomes. The Minimax Algorithm does just that. It foresees all possible outcomes and based on that it makes its decision, which means that the AI will be unbeatable. The Minimax algorithm employs a backtracking recursive method that allows it to see ahead and make a decision based on those future outcomes. Furthermore, in the minimax, there are generally two players that are called the maximizing or minimizing player. The Maximizing player is trying to maximize his or her score while the minimizing player is trying to minimize his or her score.
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Minimax Algorithm code in java:
-> Nice:
-```java
+>A recursive method is commonly used in java. The  definition of it is a method that repeatedly calls itself. For example, a common use of a recursive method is to solve a fibonacci series. This can be seen below:
+ ```java
   public static int miniMax (Board.State play, Board board, int cPlay) {
         if (cPlay = cPlay+1 == maxPly || board.isGameOver()) {
             return score(player, board);
