--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -47,18 +47,19 @@ excerpt: "Minimax, Java Coding, Artificial Intelligence, Game Trees"
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Minimax Algorithm code in java:
 >A recursive method is commonly used in java. The  definition of it is a method that repeatedly calls itself. For example, a common use of a recursive method is to solve a fibonacci series. This can be seen below:
  ```java
-  public static int miniMax (Board.State play, Board board, int cPlay) {
-        if (cPlay = cPlay+1 == maxPly || board.isGameOver()) {
+        public static int miniMax (Board.State play, Board board, int cPlay) {
+          if (cPlay = cPlay+1 == maxPly || board.isGameOver()) {
             return score(player, board);
-        }
+          }
 
-        if (board.getTheTurn() == player) {
+          if (board.getTheTurn() == player) {
             return getMax(player, board, currentPly);
-        } else {
+          }
+          else {
             return getMin(player, board, currentPly);
-        }
+          }
 
-    }
+        }
     /*
       The getMax method returns the best possible move that the user can make if he or she is the maximizing player.
       The Board is the TicTacToe board that is currently in play
