--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -45,70 +45,17 @@ excerpt: "Minimax, Java Coding, Artificial Intelligence, Game Trees"
 >The Minimax algorithm is what allows us to create an unbeatable TicTacToe AI. To win a game of TicTacToe, one must be able to foresee multiple events and make a decision based on those future outcomes. The Minimax Algorithm does just that. It foresees all possible outcomes and based on that it makes its decision, which means that the AI will be unbeatable. The Minimax algorithm employs a backtracking recursive method that allows it to see ahead and make a decision based on those future outcomes. Furthermore, in the minimax, there are generally two players that are called the maximizing or minimizing player. The Maximizing player is trying to maximize his or her score while the minimizing player is trying to minimize his or her score.
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Minimax Algorithm code in java:
+
 >A recursive method is commonly used in java. The  definition of it is a method that repeatedly calls itself. For example, a common use of a recursive method is to solve a fibonacci series. This can be seen below:
  ```java
-        public static int miniMax (Board.State play, Board board, int cPlay) {
-          if (cPlay = cPlay+1 == maxPly || board.isGameOver()) {
-            return score(player, board);
-          }
-
-          if (board.getTheTurn() == player) {
-            return getMax(player, board, currentPly);
-          }
-          else {
-            return getMin(player, board, currentPly);
-          }
-
-        }
-    /*
-      The getMax method returns the best possible move that the user can make if he or she is the maximizing player.
-      The Board is the TicTacToe board that is currently in play
-      The cPlay is the current Play that could be made.
-    */
-
-    public static int getMax (Board.State play, Board board, int cPlay) {
-        double bestS = Double.NEGATIVE_INFINITY;
-        int indexOfBestMove = -1;
-
-        for (Integer theMove : board.getMoves()) {
-
-            Board modified = board.getDeepCopy();
-
-            modified.move(theMove);
-
-            int score = miniMax(player, modifiedBoard, currentPly);
-
-            if (score >= bestScore) {
-                bestScore = score;
-                indexOfBestMove = theMove;
-            }
-
-        }
-        return indexOfBestMove;
-    }
-    /*
-      The getMin method returns the best possible move that the user can make if he or she is the minimizing player.
-      The Board is the TicTacToe board that is currently in play
-      The cPlay is the current Play that could be made.
-    */
-    public static int getMax (Board.State play, Board board, int cPlay) {
-        double bestS = Double.NEGATIVE_INFINITY;
-        int indexOfBestMove = -1;
-
-        for (Integer theMove : board.getMoves()) {
-
-            Board modified = board.getDeepCopy();
-
-            modified.move(theMove);
-
-            int score = miniMax(player, modifiedBoard, currentPly);
-
-            if (score <= bestScore) {
-                bestScore = score;
-                indexOfBestMove = theMove;
-            }
-
-        }
-        return indexOfBestMove;
-      }
-      ```
+ public class FibonacciExample
+ {
+   public static int fibonacci(int x)
+   {
+    if(x<2)
+      return x;
+    else
+      return fibonacci(x-1) + fibonacci(x-2);            
+   }
+ }
+ ```      
