--- a/_posts/2019-07-25-tic.md
+++ b/_posts/2019-07-25-tic.md
@@ -48,14 +48,69 @@ excerpt: "Minimax, Java Coding, Artificial Intelligence, Game Trees"
 
 >A recursive method is commonly used in java. The  definition of it is a method that repeatedly calls itself. For example, a common use of a recursive method is to solve a fibonacci series. This can be seen below:
  ```java
- public class FibonacciExample
- {
-   public static int fibonacci(int x)
-   {
-    if(x<2)
-      return x;
-    else
-      return fibonacci(x-1) + fibonacci(x-2);            
-   }
- }
+ public static int miniMax (Board.State play, Board board, int cPlay) {
+          if (cPlay = cPlay+1 == maxPly || board.isGameOver()) {
+            return score(player, board);
+          }
+
+          if (board.getTheTurn() == player) {
+            return getMax(player, board, currentPly);
+          }
+          else {
+            return getMin(player, board, currentPly);
+          }
+
+        }
+    /*
+      The getMax method returns the best possible move that the user can make if he or she is the maximizing player.
+      The Board is the TicTacToe board that is currently in play
+      The cPlay is the current Play that could be made.
+    */
+
+    public static int getMax (Board.State play, Board board, int cPlay) {
+        double bestS = Double.NEGATIVE_INFINITY;
+        int indexOfBestMove = -1;
+
+        for (Integer theMove : board.getMoves()) {
+
+            Board modified = board.getDeepCopy();
+
+            modified.move(theMove);
+
+            int score = miniMax(player, modifiedBoard, currentPly);
+
+            if (score >= bestScore) {
+                bestScore = score;
+                indexOfBestMove = theMove;
+            }
+
+        }
+        return indexOfBestMove;
+    }
+    /*
+      The getMin method returns the best possible move that the user can make if he or she is the minimizing player.
+      The Board is the TicTacToe board that is currently in play
+      The cPlay is the current Play that could be made.
+    */
+    public static int getMax (Board.State play, Board board, int cPlay) {
+        double bestS = Double.NEGATIVE_INFINITY;
+        int indexOfBestMove = -1;
+
+        for (Integer theMove : board.getMoves()) {
+
+            Board modified = board.getDeepCopy();
+
+            modified.move(theMove);
+
+            int score = miniMax(player, modifiedBoard, currentPly);
+
+            if (score <= bestScore) {
+                bestScore = score;
+                indexOfBestMove = theMove;
+            }
+
+        }
+        return indexOfBestMove;
+      }
+
  ```      
